Improve for orientation changed

--- a/samples/ColorPicker.Sample/MainPage.xaml
+++ b/samples/ColorPicker.Sample/MainPage.xaml
@@ -4,16 +4,17 @@
    xmlns="http://xamarin.com/schemas/2014/forms"
    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
    xmlns:cp="clr-namespace:Amporis.Xamarin.Forms.ColorPicker;assembly=Amporis.Xamarin.Forms.ColorPicker">
-   <Grid x:Name="gMain" Margin="20">
-      <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-         <Label Margin="0,0,0,10" Text="ColorPickerEntry" />
-         <cp:ColorPickerEntry
-            DialogTitle="ColorPickerDialog"
-            HorizontalOptions="Start"
-            WidthRequest="150"
-            Color="{Binding EditedColor}" />
-         <Label Margin="0,30,0,10" Text="ColorPickerMixer" />
-         <cp:ColorPickerMixer Color="{Binding EditedColor}" />
-      </StackLayout>
+   <Grid x:Name="gMain" Padding="20">
+      <ScrollView>
+         <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
+            <Label Margin="0,0,0,10" Text="ColorPickerEntry" />
+            <cp:ColorPickerEntry
+               HorizontalOptions="Start"
+               WidthRequest="150"
+               Color="{Binding EditedColor}" />
+            <Label Margin="0,30,0,10" Text="ColorPickerMixer" />
+            <cp:ColorPickerMixer Color="{Binding EditedColor}" />
+         </StackLayout>
+      </ScrollView>
    </Grid>
 </ContentPage>
