--- a/src/ColorPickerMixer.xaml
+++ b/src/ColorPickerMixer.xaml
@@ -33,11 +33,11 @@
 
          <Grid.RowDefinitions>
             <RowDefinition Height="120" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="50" />
          </Grid.RowDefinitions>
 
          <Frame
