--- a/src/ColorPickerMixer.xaml
+++ b/src/ColorPickerMixer.xaml
@@ -3,10 +3,13 @@
    x:Class="Amporis.Xamarin.Forms.ColorPicker.ColorPickerMixer"
    xmlns="http://xamarin.com/schemas/2014/forms"
    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-   xmlns:local="clr-namespace:Amporis.Xamarin.Forms.ColorPicker">
+   xmlns:local="clr-namespace:Amporis.Xamarin.Forms.ColorPicker"
+   x:Name="pContent">
    <ContentView.Content>
-      <Grid x:Name="gMain" Padding="0">
-
+      <Grid
+         x:Name="gMain"
+         Padding="0"
+         VerticalOptions="StartAndExpand">
          <Grid.Resources>
             <ResourceDictionary>
                <local:ByteToStrConverter x:Key="cnvNumber" />
@@ -28,21 +31,21 @@
          </Grid.Resources>
 
          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="5*" />
+            <ColumnDefinition Width="5*" />
          </Grid.ColumnDefinitions>
 
          <Grid.RowDefinitions>
             <RowDefinition Height="120" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="50" />
+            <RowDefinition Height="*" />
          </Grid.RowDefinitions>
 
          <Frame
+            x:Name="fMixerPreview"
             Grid.Row="0"
+            Grid.RowSpan="1"
             Grid.Column="0"
+            Grid.ColumnSpan="2"
             Margin="0"
             BackgroundColor="{Binding ColorVal.Value}"
             BorderColor="{Binding ColorVal.Value}"
@@ -50,50 +53,51 @@
             OutlineColor="{Binding ColorVal.Value}"
             VerticalOptions="FillAndExpand" />
 
-         <Slider
-            Grid.Row="1"
-            Grid.Column="0"
-            IsVisible="{Binding EditAlpha}"
-            MaximumTrackColor="LightGray"
-            MinimumTrackColor="Black"
-            ThumbColor="Black"
-            Value="{Binding ColorVal.A, Mode=TwoWay}" />
-
-         <Slider
-            Grid.Row="2"
-            Grid.Column="0"
-            MaximumTrackColor="LightGray"
-            MinimumTrackColor="Red"
-            ThumbColor="Red"
-            Value="{Binding ColorVal.R, Mode=TwoWay}" />
-
-         <Slider
-            Grid.Row="3"
-            Grid.Column="0"
-            MaximumTrackColor="LightGray"
-            MinimumTrackColor="Green"
-            ThumbColor="Green"
-            Value="{Binding ColorVal.G, Mode=TwoWay}" />
-
-         <Slider
-            Grid.Row="4"
-            Grid.Column="0"
-            MaximumTrackColor="LightGray"
-            MinimumTrackColor="Blue"
-            ThumbColor="Blue"
-            Value="{Binding ColorVal.B, Mode=TwoWay}" />
-
          <StackLayout
-            Grid.Row="5"
+            x:Name="sMixerControl"
+            Grid.Row="1"
+            Grid.RowSpan="1"
             Grid.Column="0"
-            HorizontalOptions="Fill"
-            Orientation="Horizontal">
-            <Label Text="#" />
-            <Entry
-               x:Name="eColor"
-               HorizontalOptions="Start"
-               Text="{Binding ColorVal.Hexa, Mode=TwoWay}"
-               WidthRequest="{Binding ColorEditorWidth}" />
+            Grid.ColumnSpan="2"
+            HorizontalOptions="FillAndExpand"
+            Spacing="0"
+            VerticalOptions="StartAndExpand">
+            <Slider
+               Margin="0,10,0,10"
+               IsVisible="{Binding EditAlpha}"
+               MaximumTrackColor="LightGray"
+               MinimumTrackColor="Black"
+               ThumbColor="Black"
+               Value="{Binding ColorVal.A, Mode=TwoWay}" />
+            <Slider
+               Margin="0,10,0,10"
+               MaximumTrackColor="LightGray"
+               MinimumTrackColor="Red"
+               ThumbColor="Red"
+               Value="{Binding ColorVal.R, Mode=TwoWay}" />
+            <Slider
+               Margin="0,10,0,10"
+               MaximumTrackColor="LightGray"
+               MinimumTrackColor="Green"
+               ThumbColor="Green"
+               Value="{Binding ColorVal.G, Mode=TwoWay}" />
+            <Slider
+               Margin="0,10,0,10"
+               MaximumTrackColor="LightGray"
+               MinimumTrackColor="Blue"
+               ThumbColor="Blue"
+               Value="{Binding ColorVal.B, Mode=TwoWay}" />
+            <StackLayout
+               Margin="0,10,0,10"
+               HorizontalOptions="Fill"
+               Orientation="Horizontal">
+               <Label Text="#" />
+               <Entry
+                  x:Name="eColor"
+                  HorizontalOptions="Start"
+                  Text="{Binding ColorVal.Hexa, Mode=TwoWay}"
+                  WidthRequest="{Binding ColorEditorWidth}" />
+            </StackLayout>
          </StackLayout>
       </Grid>
    </ContentView.Content>
