--- a/src/ColorPickerMixer.xaml
+++ b/src/ColorPickerMixer.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <ContentView
-   x:Class="Amporis.Xamarin.Forms.ColorPicker.ColorPickerMixer"
+   x:Class="Xam.Plugin.SimpleColorPicker.ColorPickerMixer"
    xmlns="http://xamarin.com/schemas/2014/forms"
    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-   xmlns:local="clr-namespace:Amporis.Xamarin.Forms.ColorPicker"
+   xmlns:local="clr-namespace:Xam.Plugin.SimpleColorPicker"
    x:Name="pContent">
    <ContentView.Content>
       <Grid
