--- a/samples/ColorPicker.Sample/MainPage.xaml
+++ b/samples/ColorPicker.Sample/MainPage.xaml
@@ -6,14 +6,45 @@
    xmlns:cp="clr-namespace:Xam.Plugin.SimpleColorPicker;assembly=Xam.Plugin.SimpleColorPicker">
    <Grid x:Name="gMain" Padding="20">
       <ScrollView>
-         <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
+         <StackLayout
+            HorizontalOptions="FillAndExpand"
+            Orientation="Vertical"
+            VerticalOptions="StartAndExpand">
             <Label Margin="0,0,0,10" Text="ColorPickerEntry" />
             <cp:ColorPickerEntry
                HorizontalOptions="Start"
                WidthRequest="150"
                Color="{Binding EditedColor}" />
+
+            <StackLayout
+               Padding="20"
+               BackgroundColor="DarkGray"
+               Spacing="0">
+               <Label
+                  Margin="0,0,0,10"
+                  Text="Dark ColorPickerEntry Example"
+                  TextColor="White" />
+               <cp:ColorPickerEntry
+                  DialogColor="#757575"
+                  HorizontalOptions="Start"
+                  TextColor="White"
+                  WidthRequest="150"
+                  Color="{Binding EditedColor}" />
+            </StackLayout>
+
             <Label Margin="0,30,0,10" Text="ColorPickerMixer" />
             <cp:ColorPickerMixer Color="{Binding EditedColor}" />
+
+            <StackLayout
+               Padding="20"
+               BackgroundColor="DarkGray"
+               Spacing="0">
+               <Label
+                  Margin="0,30,0,10"
+                  Text="DarkColorPickerMixer"
+                  TextColor="White" />
+               <cp:ColorPickerMixer TextColor="White" Color="{Binding EditedColor}" />
+            </StackLayout>
          </StackLayout>
       </ScrollView>
    </Grid>
