--- a/samples/ColorPicker.Sample/MainPage.xaml
+++ b/samples/ColorPicker.Sample/MainPage.xaml
@@ -10,6 +10,8 @@
             HorizontalOptions="FillAndExpand"
             Orientation="Vertical"
             VerticalOptions="StartAndExpand">
+
+
             <Label Margin="0,0,0,10" Text="ColorPickerEntry" />
             <cp:ColorPickerEntry
                HorizontalOptions="Start"
@@ -41,10 +43,20 @@
                Spacing="0">
                <Label
                   Margin="0,30,0,10"
-                  Text="DarkColorPickerMixer"
+                  Text="Dark Color Picker Mixer"
                   TextColor="White" />
                <cp:ColorPickerMixer TextColor="White" Color="{Binding EditedColor}" />
             </StackLayout>
+
+            <Label
+               Margin="0,30,0,10"
+               Text="Dialog via Button"
+               TextColor="White" />
+            <Button
+               Margin="0,20,0,0"
+               Clicked="OpenColorPicker_Clicked"
+               Text="Open dialog" />
+
          </StackLayout>
       </ScrollView>
    </Grid>
