--- a/samples/ColorPicker.Sample/MainPage.xaml
+++ b/samples/ColorPicker.Sample/MainPage.xaml
@@ -3,14 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ColorPicker.Sample"
              xmlns:cp="clr-namespace:Amporis.Xamarin.Forms.ColorPicker;assembly=Amporis.Xamarin.Forms.ColorPicker"
-             x:Class="ColorPicker.Sample.MainPage">
+             x:Class="ColorPicker.Sample.MainPage"
+             Title="ColorPicker Sample">
     <Grid x:Name="gMain">
         <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
             <Label Text="ColorPickerEntry" Margin="0,0,0,10" />
             <cp:ColorPickerEntry WidthRequest="150" HorizontalOptions="Start" 
-                                 DialogTitle="ColorPickerDialog" Color="{Binding EditedColor}" />            
+                                 DialogTitle="ColorPickerDialog" Color="{Binding EditedColor}" />   
+            
             <Label Text="ColorPickerMixer" Margin="0,30,0,10" />
             <cp:ColorPickerMixer Color="{Binding EditedColor}" />
+
+            <Button Text="Input dialog" x:Name="bInputDialog" Clicked="BInputDialog_Clicked" Margin="0,30,0,10" />
         </StackLayout>
     </Grid>
 </ContentPage>
